# kilns-haskell

./: .gitattributes  .gitignore  .ormolu  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml  kilns.cabal
.config/: mustache.yaml
.config/project/: default.nix  github-ci.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: CHANGELOG.md  README.md  kilns.cabal
core/docs/: license-report.md
core/src/Language/Common/: SetLike.hs
core/src/Language/KellCalculus/: AST.hs  ContextBisimulation.hs  ContextualEquivalence.hs  FraKtal.hs  JKCalculus.hs  LabeledTransitionSystem.hs  Parser.hs  PnpJKCalculus.hs  ReductionSemantics.hs
core/src/Language/Kilns/Interpreter/: Main.hs
core/src/Text/: Derp.hs
core/src/Text/Derp/: Unsafe.hs
kilns/: kilns.cabal
kilns/src/Language/Common/: SetLike.hs
kilns/src/Language/KellCalculus/: AST.hs  ContextualEquivalence.hs  FraKtal.hs  JKCalculus.hs  LabeledTransitionSystem.hs  Parser.hs  PnpJKCalculus.hs  ReductionSemantics.hs
kilns/src/Language/Kilns/Interpreter/: Main.hs
kilns/src/Text/: Derp.hs
kilns/src/Text/Derp/: Unsafe.hs
source/Language/Common/: SetLike.hs
source/Language/KellCalculus/: AST.hs  ContextBisimulation.hs  ContextualEquivalence.hs  FraKtal.hs  JKCalculus.hs  LabeledTransitionSystem.hs  Parser.hs  PnpJKCalculus.hs  ReductionSemantics.hs
source/Language/Kilns/Interpreter/: Main.hs
source/Text/: Derp.hs
